--- a/user-service/src/main/resources/application.yml
+++ b/user-service/src/main/resources/application.yml
@@ -1,3 +1,48 @@
+server:
+  port: 8010
+
 spring:
-  application:
-    name: user-service
+  # servlet 配置
+  servlet:
+    multipart:
+      max-file-size: 10MB
+      max-request-size: 10MB
+
+  # 数据源配置
+  datasource:
+    type: com.alibaba.druid.pool.DruidDataSource
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    url: jdbc:mysql://loong.cloud:3306/user-db
+    username: root
+    password: wXrUxl7P
+    druid:
+      # 连接池基础参数
+      initial-size: 5       # 初始化连接数
+      max-active: 20        # 最大连接数
+      min-idle: 5           # 最小空闲连接数
+      max-wait: 60000       # 获取连接超时时间（毫秒）
+      validation-query: SELECT 1  # 连接有效性检测SQL
+      test-while-idle: true
+
+      # 监控功能配置
+      web-stat-filter:
+        enabled: false       # 启用WebStatFilter
+        exclusions: "*.js,*.gif,*.jpg,*.png,*.css,*.ico,/druid/*"  # 排除路径
+      stat-view-servlet:
+        enabled: true       # 启用StatViewServlet
+        url-pattern: /druid/*  # 访问路径
+        login-username: admin  # 登录用户名
+        login-password: admin  # 登录密码
+        resetEnable: false     # 禁用"清空数据"按钮
+      # SQL监控配置
+      filters: stat,wall,log4j2  # 必须包含stat以启用监控
+      filter:
+        stat:
+          slow-sql-millis: 1000  # 慢SQL阈值（单位：毫秒）
+          log-slow-sql: true     # 记录慢SQL日志
+          merge-sql: true        # 合并相似SQL
+        wall:
+          enabled: true          # 启用SQL防火墙
+          config:
+            delete-allow: false  # 禁止DELETE操作
+            drop-table-allow: false  # 禁止DROP TABLE操作
