--- a/user-service/src/main/resources/application-dev.yml
+++ b/user-service/src/main/resources/application-dev.yml
@@ -1,7 +1,10 @@
+server:
+  port: 8010
+
 spring:
   cloud:
-    # 注意：写在远程配置里才生效（用于激活本地配置有效，便于开发使用）
+    # 注意：写在远程配置里才生效（客户端启动时会先通过 Config Server 获取远程配置，再加载本地配置）-->（用于激活本地配置有效，便于开发使用）
     config:
-      allow-override: true       # 允许本地配置覆盖远程配置
-      override-none: true        # 本地配置文件、环境变量等可以覆盖远程配置
-      override-system-properties: false  # 禁止系统属性（-D参数）覆盖远程配置
+      allow-override: true               # 总开关，决定是否允许本地配置覆盖远程配置
+      override-none: true                # 控制远程配置是否“不覆盖任何本地属性源”，
+      override-system-properties: false  # 当 override-none 为 true 时，此时配置无效，控制远程配置是否覆盖系统属性（如命令行参数、-D 参数）
